--- a/Proyecto_BD/appsettings.json
+++ b/Proyecto_BD/appsettings.json
@@ -6,7 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=Proyecto_BD;Integrated Security=True;Trust Server Certificate=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=.;Initial Catalog=Proyecto_BD;Integrated Security=True;Trust Server Certificate=True"
+    },
+
+    "Smtp": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "EnableSsl": true,
+        "User": "elvectar@gmail.com",
+        "Password": "dtorrzianuzr iqzq"
+    }
 }
+
